<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.hcd_fresher057.todo_list.MainActivity"
    >
    <item
        android:id="@+id/list_type_mission_menu"
        android:orderInCategory="100"
        android:title="@string/list_mission"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_mission_menu"
        android:orderInCategory="100"
        android:title="@string/add_mission"
        app:showAsAction="never" />
    <item
        android:id="@+id/setting_menu"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/action_search"-->
        <!--android:icon="@android:drawable/ic_search_category_default"-->
        <!--android:title="@string/search"-->
        <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
        <!--app:showAsAction="collapseActionView" />-->
</menu>
